Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15961

Fix stacktraces under FreeBSD

    XMLWordPrintable

Details

    Description

      Currently, MariaDB's server does not link under FreeBSD's aarch64 architecture due to the use of sbrk, which does not exist under that architecture. MySQL has corrected this issue with the following commit:

      https://github.com/mysql/mysql-server/commit/75271e51d60bce8683423b208cbb43b11ca6060e

      I have tested patching all current versions of MariaDB from FreeBSD's ports tree (5.5, 10.0, 10.1 and 10.2) under the aarch64 architecture, patching only mysys/stacktrace.c in all those versions, and it allows MariaDB to link. I have sent a patch to the FreeBSD ports tree here:

      https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=227628

      If the patch that MySQL utilized was applied to all supported versions of MariaDB, it would allow MariaDB to work on more FreeBSD platforms.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              CyberBotX Naram Qashat
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: